test/tests/stages/13_floating-point_numbers/valid/constants/round_constants.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  const double(1.00000000000000033306690738754696212708950042724609375)
  !=
  const double(1.0000000000000004)
  )
  {
  return
  const int(1)
  ;
  }
  if
  (
  const double(9223372036854776832.5)
  !=
  const double(9223372036854777856.0)
  )
  {
  return
  const int(2)
  ;
  }
  return
  const int(0)
  ;
  }
