test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/compound_left_bitshift.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  double
  identifier(d)
  =
  const double(1.0)
  ;
  identifier(d)
  <<=
  const int(1)
  ;
  return
  identifier(d)
  ;
  }
